--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,6 +68,7 @@ body {
   color: #000000;
   padding: 10px 37px;
   background-image: linear-gradient(transparent 16px, #FFE17F 16px 24px, transparent 24px);
+  border: none;
 }
 
 .visually-hidden {
@@ -812,6 +813,7 @@ body {
 
 .inner-header {
   margin-top: 35px;
+  margin-bottom: 35px;
   padding-left: 60px;
   padding-right: 60px;
 }
@@ -876,6 +878,7 @@ body {
 
 .catalog-filter {
   grid-row: 1 / -1;
+  padding: 25px 60px 0 60px;
 }
 
 .catalog-filter-title {
@@ -886,6 +889,25 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+  margin: 0 0 60px 0;
+}
+
+.catalog-filter-group {
+  border: none;
+  padding: 32px 0 0 0;
+  margin: 0 0 35px 0;
+  position: relative;
+}
+
+.catalog-filter-group::before {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: #000000;
+  position: absolute;
+  top: -32px;
+  left: 0;
 }
 
 .catalog-filter-legend {
@@ -894,13 +916,151 @@ body {
   line-height: 20px;
   letter-spacing: -0.02em;
   color: #000000;
+  padding: 0;
 }
 
 .catalog-filter-list {
   font-size: 16px;
   line-height: 20px;
   color: #000000;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
+
+.catalog-filter-item {
+  margin-bottom: 17px;
+}
+
+.catalog-filter-item:last-child {
+  margin-bottom: 0;
+}
+
+.range {
+  margin-bottom: 35px;
+}
+
+.range-scale {
+  position: relative;
+  height: 2px;
+  background-color: #DCDCDC;;
+}
+
+.range-bar {
+  position: absolute;
+  height: 2px;
+  background-color: #000000;
+}
+
+.range-toggle-wrapper {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: -8px;
+}
+
+.range-toggle-wrapper-min {
+  left: -9px;
+}
+
+.range-toggle-wrapper-max {
+  right: -9px;
+}
+
+.range-toggle {
+  position: absolute;
+  top: 0;
+  width: 18px;
+  height: 18px;
+  background: #EBEBEB;
+  border-radius: 50%;
+  border: 2px solid #000000;
+  padding: 0;
+}
+
+.range-toggle-label {
+  margin-top: 21px;
+  display: grid;
+  grid-template-columns: min-content 45px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.range-toggle-wrapper-min .range-toggle-label {
+  margin-left: -3px;
+}
+
+.range-toggle-wrapper-max .range-toggle-label {
+  margin-left: -20px;
+}
+
+.range-toggle-text {
+  text-align: right;
+  color: #000000;
+  opacity: 0.3;
+}
+
+.range-input {
+  opacity: 0.3;
+  display: inline-block;
+  padding: 0 2px;
+  font: inherit;
+  border: none;
+  background-color: transparent;
+  appearance: textfield;
+}
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.control {
+  display: flex;
+  align-items: start;
+}
+
+.control-checkbox {
+  display: inline-block;
+  min-width: 20px;
+  width: 20px;
+  height: 20px;
+  margin-right: 16px;
+  border: 2px solid #000000;
+  border-radius: 3px;
+}
+
+.control-input:checked + .control-checkbox {
+  background-image: url("../images/checkbox-checked.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.control-radio {
+  display: inline-block;
+  min-width: 20px;
+  width: 20px;
+  height: 20px;
+  margin-right: 16px;
+  border: 2px solid #000000;
+  border-radius: 50%;
+  position: relative;
+}
+
+.control-input:checked + .control-radio::before {
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #000000;
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 
 .catalog-sorting {
   display: flex;
@@ -1131,4 +1291,136 @@ body {
 .developer-logo {
   text-align: right;
   margin-top: 62px;
+}
+
+
+.modal-container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(240, 240, 240, 0.9);
+  z-index: 20;
+}
+
+.modal-hidden {
+  /* display: none; */
+}
+
+.modal {
+  width: 920px;
+  padding: 72px 80px;
+  background: #FFFFFF;
+  border: 10px solid #000000;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 74px;
+  right: 70px;
+  width: 46px;
+  height: 46px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  background-color: transparent;
+  background-image: url("../images/icons/icons-cross.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+  margin: 0 0 42px 0;
+}
+
+.modal-form {
+  display: grid;
+  grid-template-columns: repeat(4, 180px);
+  row-gap: 42px;
+}
+
+.modal-form-name {
+  grid-column: 1 / 3;
+}
+
+.modal-form-email {
+  grid-column: 3 / 5;
+}
+
+.modal-form-what {
+  grid-column: 1 / 4;
+}
+
+.modal-form-email,
+.modal-form-count {
+  padding-left: 40px;
+}
+
+.label-text {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+  margin-bottom: 14px;
+}
+
+.label-message {
+  font-size: 14px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.modal-form-error .label-message {
+  color: #FF3D3D;
+}
+
+.modal-form-input {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  padding: 20px 55px 20px 20px;
+  border: 2px solid transparent;
+  border-radius: 0;
+  background-color: #F0F0F0;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 20px) center;
+}
+
+.modal-form-error .modal-form-input {
+  border-color: #FF3D3D;
+}
+
+
+.modal-form-input::placeholder {
+  opacity: 0.3;
+}
+
+.modal-form-input-name {
+  width: 360px;
+  background-image: url("../images/icons/icons-input-user.svg");
+}
+.modal-form-input-email {
+  width: 360px;
+  background-image: url("../images/icons/icons-input-email.svg");
+}
+
+.modal-form-input-what {
+  width: 540px;
+}
+
+.label-tooltip-text {
+  display: none;
 }
