--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,15 @@ body {
   border: none;
 }
 
+.button-white {
+  background-image: linear-gradient(#FFFFFF 16px, #FFE17F 16px 24px, #FFFFFF 24px);
+}
+
+.button-narrow {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -98,7 +107,7 @@ body {
 
 .header-top {
   display: flex;
-  margin-bottom: 45px;
+  margin-bottom: 40px;
 }
 
 .header-search {
@@ -242,11 +251,7 @@ body {
 }
 
 .main-navigation-item {
-  margin-left: 47px;
-}
-
-.main-navigation-item:last-child {
-  margin-left: 51px;
+  margin-left: 45px;
 }
 
 .main-navigation-link {
@@ -330,6 +335,10 @@ body {
   text-decoration: none;
 }
 
+.slider-promo {
+  margin-top: -40px;
+}
+
 .slider-promo-list {
   margin: 0;
   padding: 0;
@@ -359,7 +368,7 @@ body {
   line-height: 180px;
   color: #FFFFFF;
   right: 49px;
-  top: 25px;
+  top: 5px;
   z-index: 10;
 }
 
@@ -386,7 +395,7 @@ body {
 
 .slider-promo-text {
   margin-top: 0;
-  margin-bottom: 60px;
+  margin-bottom: 48px;
 }
 
 .slider-promo-params {
@@ -394,8 +403,8 @@ body {
   grid-template-rows: min-content min-content;
   grid-auto-columns: max-content;
   row-gap: 12px;
-  column-gap: 40px;
-  margin: 60px 0 0 0;
+  column-gap: 20px;
+  margin: 48px 0 0 0;
 
 }
 
@@ -436,7 +445,7 @@ body {
 
 .slider-promo-bullet-iist {
   display: flex;
-  margin: -18px 0 0 0;
+  margin: -30px 0 0 0;
   padding: 0;
   list-style: none;
   justify-content: center;
@@ -466,7 +475,7 @@ body {
 
 .catalog-section {
   margin-top: 70px;
-  margin-bottom: 70px;
+  margin-bottom: 62px;
 }
 
 .catalog-section-link {
@@ -675,7 +684,7 @@ body {
 .company-information {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 80px;
+  margin-bottom: 70px;
 }
 
 .company-information-header {
@@ -714,7 +723,13 @@ body {
   color: inherit;
 }
 
+.company-contacts .button {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .delivery-methods-list {
+  list-style: none;
   font-family: 'Rubik', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -723,16 +738,26 @@ body {
   color: #000000;
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
-}
-
-.delivery-method-item::marker {
-  color: #FFC700;
+  margin-bottom: 30px;
 }
 
 .delivery-method-item {
   list-style-position: inside;
   margin-bottom: 19px;
+  padding-left: 40px;
+  position: relative;
+}
+
+.delivery-method-item::before {
+  content: "";
+  display: block;
+  position:absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #FFC700;
+  left: 4px;
+  top: 6px;
 }
 
 .delivery-method-item:last-child {
@@ -742,6 +767,7 @@ body {
 .company-information-subheader {
   font-size: 24px;
   line-height: 30px;
+  margin: 0 0 15px 0
 }
 
 .subscription {
@@ -759,7 +785,7 @@ body {
 .subscription-form {
   display: flex;
   grid-column: 1 / -1;
-  padding-top:104px;
+  padding-top:100px;
 }
 
 .subscription-header {
@@ -769,11 +795,13 @@ body {
   line-height: 50px;
   color: #000000;
   margin: 0;
+  padding-left: 7px;
 }
 
 .subscription-text {
   margin: 0;
   margin-top: 10px;
+  padding-left: 7px;
 }
 
 .subscription-input {
@@ -797,7 +825,7 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
-  padding: 18px 39px;
+  padding: 18px 38px;
   border: 3px solid #C4C4C4;
   border-radius: 0;
 }
@@ -1276,7 +1304,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
-  padding: 62px 0 0 0;
+  padding: 55px 0 0 0;
   list-style: none;
 }
 
@@ -1347,11 +1375,11 @@ body {
 }
 
 .modal-hidden {
-  /* display: none; */
+  display: none;
 }
 
 .modal {
-  width: 920px;
+  width: 940px;
   padding: 72px 80px;
   background: #FFFFFF;
   border: 10px solid #000000;
@@ -1387,26 +1415,87 @@ body {
 }
 
 .modal-form {
-  display: grid;
-  grid-template-columns: repeat(4, 180px);
-  row-gap: 42px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modal-form-label {
+  margin-bottom: 42px;
 }
 
 .modal-form-name {
-  grid-column: 1 / 3;
+  width: 360px;
 }
 
 .modal-form-email {
-  grid-column: 3 / 5;
+  width: 360px;
+  margin-left:40px;
 }
 
 .modal-form-what {
-  grid-column: 1 / 4;
+  width: 540px;
 }
 
-.modal-form-email,
 .modal-form-count {
-  padding-left: 40px;
+  width: 180px;
+  margin-left: 40px;
+}
+
+.label-count-wrapper {
+  display: flex;
+}
+
+.input-count-wrapper {
+  background-color: #F0F0F0;
+  display: flex;
+}
+
+.input-count {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  background-color: #F0F0F0;
+  width: 60px;
+  padding: 20px 0;
+  border: none;
+  text-align: center;
+}
+
+.input-count-button {
+  border: none;
+  border-radius: 0;
+  background-color: #F0F0F0;
+  width: 60px;
+  height: 60px;
+  padding: 0;
+  position: relative;
+  z-index: 5;
+}
+
+.input-count-minus::before,
+.input-count-plus::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 16px;
+  height: 2px;
+  background-color: #000000;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.input-count-plus::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 2px;
+  height: 16px;
+  background-color: #000000;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .label-text {
@@ -1428,12 +1517,60 @@ body {
   color: #FF3D3D;
 }
 
+.label-tooltip {
+  width: 26px;
+  height: 26px;
+  background-color: #FFE17F;
+  background-image: url("../images/icons/icons-tooltip-info.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0;
+  margin-left: 8px;
+  border-radius: 13px;
+  border: none;
+  transform: translateY(-3px);
+  position: relative;
+  z-index: 10;
+}
+
+.label-tooltip-text {
+  display: none;
+  position: absolute;
+  top: 36px;
+  left: -138px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  width: 200px;
+  padding: 18px;
+  background-color: #000000;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+.label-tooltip-text::before {
+  content: "";
+  background: #000000;
+  display: block;
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: -4px;
+  right: 40px;
+  transform: translateX(-50%) rotate(45deg);
+}
+
+.label-tooltip:hover .label-tooltip-text,
+.label-tooltip:focus .label-tooltip-text {
+  display: block;
+}
+
 .modal-form-input {
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
   color: #000000;
-  padding: 20px 55px 20px 20px;
+  padding: 20px;
   border: 2px solid transparent;
   border-radius: 0;
   background-color: #F0F0F0;
@@ -1452,17 +1589,15 @@ body {
 
 .modal-form-input-name {
   width: 360px;
+  padding-right: 54px;
   background-image: url("../images/icons/icons-input-user.svg");
 }
 .modal-form-input-email {
   width: 360px;
+  padding-right: 54px;
   background-image: url("../images/icons/icons-input-email.svg");
 }
 
 .modal-form-input-what {
   width: 540px;
-}
-
-.label-tooltip-text {
-  display: none;
 }
