--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,6 +178,108 @@ body {
 .user-navigation-basket {
   width: 100px;
   margin-left: 36px;
+  position: relative;
+  z-index: 100;
+}
+
+.basket-popover {
+  display: none;
+  position: absolute;
+  left: 17px;
+  top: 36px;
+  transform: translateX(-50%);
+  width: 320px;
+  background-color: #000000;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+
+.basket-popover::before {
+  content: "";
+  background: #000000;
+  display: block;
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: -4px;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+}
+
+.user-navigation-link:hover ~ .basket-popover,
+.user-navigation-link:focus ~ .basket-popover {
+  display: block;
+}
+
+.basket-product-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.basket-product-item {
+  display: flex;
+  align-items: start;
+  padding: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.basket-product-item:last-child {
+  border: none;
+}
+
+.basket-product-image {
+  width: 39px;
+  line-height: 0
+}
+
+.basket-product-title {
+  padding: 0 33px 0 23px;
+}
+
+.basket-product-remove {
+  width: 10px;
+  height: 10px;
+  border: none;
+  border-radius: 0;
+  background-color: transparent;
+  background-image: url("../images/icons/icons-remove.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.basket-total {
+  padding: 0 20px;
+  background-color: #1A1A1A;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.basket-total-count,
+.basket-total-price {
+  padding: 12px 0;
+}
+
+.basket-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  padding: 20px 14px;
+  min-height: 50px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+  background-color: #FFFFFF;
 }
 
 .user-navigation-logout {
