--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,10 +231,10 @@ body {
 }
 
 .basket-popover {
-  display: none;
+  display: block;
   position: absolute;
-  left: 17px;
-  top: 36px;
+  left: 36px;
+  top: 37px;
   transform: translateX(-50%);
   width: 320px;
   background-color: #000000;
@@ -281,7 +281,7 @@ body {
   text-decoration: none;
   color: #FFFFFF;
   display: flex;
-  margin-right:20px;
+  margin-right: 20px;
 }
 
 .basket-product-link:hover {
@@ -348,7 +348,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 20px;
-  padding: 20px 14px;
+  padding: 14px;
   min-height: 50px;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
@@ -474,7 +474,7 @@ body {
 }
 
 .main-navigation-link-active {
-  position:relative;
+  position: relative;
 }
 
 .main-navigation-link-active::after {
@@ -539,8 +539,8 @@ body {
   left: -60px;
   margin-top: -10px;
   padding: 15px 60px 27px 60px;
-  background-color:  #FFE17F;
-  z-index:50;
+  background-color: #FFE17F;
+  z-index: 50;
 }
 
 .main-catalog-link:active + .navigation-catalog-wrapper {
@@ -596,7 +596,7 @@ body {
   padding: 0;
   list-style: none;
   counter-reset: slide 0;
-  background-image: linear-gradient( #FFE17F 150px, transparent 150px);
+  background-image: linear-gradient(#FFE17F 150px, transparent 150px);
 }
 
 .slider-promo-items {
@@ -791,15 +791,15 @@ body {
   background-position: center;
 }
 
-.catalog-section-link:hover::before{
+.catalog-section-link:hover::before {
   background-color: #FFC700;
 }
 
-.catalog-section-link:active{
+.catalog-section-link:active {
   opacity: 0.3;
 }
 
-.catalog-section-link:focus{
+.catalog-section-link:focus {
   outline: 2px solid #AF4FFF
 }
 
@@ -964,7 +964,7 @@ body {
   content: "";
   width: 125px;
   height: 100%;
-  background-color:#FFE17F;
+  background-color: #FFE17F;
   background-image: url("../images/delivery-lorry.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -1077,7 +1077,7 @@ body {
 .delivery-method-item::before {
   content: "";
   display: block;
-  position:absolute;
+  position: absolute;
   width: 8px;
   height: 8px;
   border-radius: 50%;
@@ -1111,7 +1111,7 @@ body {
 .subscription-form {
   display: flex;
   grid-column: 1 / -1;
-  padding-top:100px;
+  padding-top: 100px;
 }
 
 .subscription-header {
@@ -1343,7 +1343,8 @@ body {
 .range-scale {
   position: relative;
   height: 2px;
-  background-color: #DCDCDC;;
+  background-color: #DCDCDC;
+  ;
 }
 
 .range-bar {
@@ -1477,7 +1478,7 @@ body {
   height: 10px;
   border-radius: 50%;
   background-color: #000000;
-  position:absolute;
+  position: absolute;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
@@ -1652,7 +1653,7 @@ body {
   top: 180px;
   left: 50%;
   transform: translateX(-50%);
-  width:210px;
+  width: 210px;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -1681,7 +1682,7 @@ body {
 
 .catalog-link:hover::after {
   content: "Подробнее";
-  background-image: linear-gradient(transparent 6px,  #FFE17F 6px 14px, transparent 14px);
+  background-image: linear-gradient(transparent 6px, #FFE17F 6px 14px, transparent 14px);
 }
 
 .catalog-link:hover .catalog-product-name {
@@ -1690,7 +1691,7 @@ body {
 
 .catalog-link:active::after {
   content: "Подробнее";
-  background-image: linear-gradient(transparent 6px,  #FFC700 6px 14px, transparent 14px);
+  background-image: linear-gradient(transparent 6px, #FFC700 6px 14px, transparent 14px);
 }
 
 .catalog-link:active .catalog-product-name,
@@ -1771,7 +1772,7 @@ body {
 }
 
 .pagination-link,
-.pagination-empty{
+.pagination-empty {
   display: flex;
   font-size: 16px;
   line-height: 20px;
@@ -1935,7 +1936,7 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   text-decoration: none;
-  color:#FFFFFF;
+  color: #FFFFFF;
   position: relative;
 }
 
@@ -2001,11 +2002,11 @@ body {
 }
 
 .developer-logo-link:hover path,
-.developer-logo-link:active path{
+.developer-logo-link:active path {
   fill: #FFFFFF;
 }
 
-.developer-logo-link:active{
+.developer-logo-link:active {
   opacity: 0.3
 }
 
@@ -2028,8 +2029,8 @@ body {
 }
 
 .modal {
-  width: 940px;
-  padding: 72px 80px;
+  width: 920px;
+  padding: 62px 70px;
   background: #FFFFFF;
   border: 10px solid #000000;
   box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
@@ -2041,8 +2042,8 @@ body {
 
 .modal-close-button {
   position: absolute;
-  top: 74px;
-  right: 70px;
+  top: 64px;
+  right: 60px;
   width: 46px;
   height: 46px;
   border: none;
@@ -2081,7 +2082,7 @@ body {
 }
 
 .modal-form-label {
-  margin-bottom: 42px;
+  margin-bottom: 40px;
 }
 
 .modal-form-name {
@@ -2090,7 +2091,7 @@ body {
 
 .modal-form-email {
   width: 360px;
-  margin-left:40px;
+  margin-left: 40px;
 }
 
 .modal-form-what {
@@ -2179,10 +2180,11 @@ body {
 }
 
 .input-count-button:disabled {
-
+  opacity: 0.1;
 }
 
 .label-text {
+  display: block;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
@@ -2192,6 +2194,7 @@ body {
 }
 
 .label-message {
+  display: block;
   font-size: 14px;
   line-height: 20px;
   color: #000000;
@@ -2253,7 +2256,7 @@ body {
 .modal-form-input {
   font-family: inherit;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 18px;
   color: #000000;
   padding: 20px;
   border: 2px solid transparent;
@@ -2295,6 +2298,7 @@ body {
   padding-right: 54px;
   background-image: url("../images/icons/icons-input-user.svg");
 }
+
 .modal-form-input-email {
   width: 360px;
   padding-right: 54px;
@@ -2303,4 +2307,9 @@ body {
 
 .modal-form-input-what {
   width: 540px;
+}
+
+.modal-form .button {
+  width: 200px;
+  text-align: center;
 }
