--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,7 @@ body {
 
 .button {
   display: inline-block;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -147,7 +147,7 @@ body {
 
 .header-search-input {
   width: 360px;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #000000;
@@ -161,7 +161,7 @@ body {
 }
 
 .header-search-button {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 16px;
   line-height: 20px;
   width: 160px;
@@ -231,7 +231,7 @@ body {
 }
 
 .basket-popover {
-  display: block;
+  display: none;
   position: absolute;
   left: 36px;
   top: 37px;
@@ -350,7 +350,7 @@ body {
   margin: 20px;
   padding: 14px;
   min-height: 50px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -463,7 +463,7 @@ body {
 
 .main-navigation-link {
   position: relative;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -636,7 +636,7 @@ body {
 }
 
 .slider-promo-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
@@ -768,7 +768,7 @@ body {
 .catalog-section-link {
   display: block;
   position: relative;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
@@ -927,7 +927,7 @@ body {
 }
 
 .service-description-header {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
@@ -941,7 +941,7 @@ body {
 }
 
 .delivery-link {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   display: flex;
   position: relative;
   min-height: 100px;
@@ -1014,7 +1014,7 @@ body {
 }
 
 .company-information-header {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
@@ -1056,7 +1056,7 @@ body {
 
 .delivery-methods-list {
   list-style: none;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
@@ -1115,7 +1115,7 @@ body {
 }
 
 .subscription-header {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
@@ -1157,7 +1157,7 @@ body {
 }
 
 .subscription-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -1207,7 +1207,7 @@ body {
 }
 
 .inner-header-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
@@ -1282,7 +1282,7 @@ body {
 }
 
 .catalog-filter-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 16px;
   line-height: 19px;
@@ -1344,7 +1344,6 @@ body {
   position: relative;
   height: 2px;
   background-color: #dcdcdc;
-  ;
 }
 
 .range-bar {
@@ -1527,7 +1526,7 @@ body {
 }
 
 .catalog-sorting-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 16px;
   line-height: 19px;
@@ -1613,7 +1612,7 @@ body {
   min-width: 60px;
   height: 60px;
   border-radius: 30px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 14px;
   line-height: 16px;
@@ -1654,7 +1653,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 210px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -1722,7 +1721,7 @@ body {
 .catalog-load-more {
   display: block;
   width: 100%;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 16px;
   line-height: 19px;
@@ -1790,7 +1789,7 @@ body {
 }
 
 .pagination-link-button {
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -1929,7 +1928,7 @@ body {
 }
 
 .footer-navigation-link {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -2068,7 +2067,7 @@ body {
 }
 
 .modal-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
