--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1427,6 +1427,10 @@ body {
   appearance: textfield;
 }
 
+.range-input:focus {
+  outline: 2px solid #af4fff;
+}
+
 .range-input::-webkit-outer-spin-button,
 .range-input::-webkit-inner-spin-button {
   appearance: none;
